2002-02-18  Paul Eggert  <eggert@twinsun.com>

	* lib/depcomp: Don't use "tail +3"; it's not portable to
	POSIX 1003.1-2001 hosts.

2002-02-18  Jim Meyering  <meyering@lucent.com>

	* tests/cond12.test: Use sed 1q, not `head -n 1'.
	The latter is not portable to some old systems.
	* m4/depout.m4: Don't use `head -1'; it's no longer portable.
	Use `sed 1q' instead.
	* tests/insthook.test: Likewise.

2002-02-17  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (handle_lib_objects_cond): Tell the user to put
	global linker flags in AM_LDFLAGS, not LDFLAGS.

	* automake.texi (General Operation): AC_SUBST'ed variables
	override Automake's variables.
	(Uniform): More words and @refs.
	(Auxiliary Programs) <config.sub, config.guess>: Add URL.
	(etags): More explanations about the first example.
	(Invoking Automake): Mention autoreconf.  More @refs.
	(Requirements): Mention AC_CONFIG_FILES.
	(Optional): AC_CHECK_TOOL will no longer install config.sub and
	config.guess.  Mention AC_LIBOBJ, AC_LIBSOURCE, and AC_LIBSOURCES.
	(Invoking aclocal): aclocal no longer warn about duplicates.
	(Macros) <AM_INIT_AUTOMAKE>: More explanations.
	(Extending aclocal): Suggest using the output of
	`aclocal --print-ac-dir` to install third-party macros.
	(Alternative): Specify ordering of dist_, nodist_, and nobase_
	prefixes.
	(A Program): Mention scripts.  The global LDADD variable is not
	meant to hold link flags, suggest using AM_LDFLAGS instead.
	(Program and Library Variables) <maude_LIBADD, maude_LDADD>:
	_LIBADD and _LDADD are subject to the same restriction wrt to
	link flags.
	(Program and Library Variables) <maude_DEPENDECIES>: Is also
	derived from maude_LIBADD.
	(Program variables): Define AM_LDFLAGS.
	(Dependencies): Passing the no-dependencies option to
	AM_INIT_AUTOMAKE is prefered.
	(Scripts): Explain why automake is magically cleaned.
	Mention noinst_SCRIPTS and check_SCRIPTS.
	(Data): Use dist_ in Automake's example.