@@ -14,5 +14,6 @@ $ACLOCAL || exit 1
 $AUTOMAKE || exit 1
 
 test "`grep install-exec-hook Makefile.in | wc -l`" -gt 1 || exit 1
-lnum=`grep -n '^install-exec-am:' Makefile.in | awk -F: '{print $1}'`
-test x$lnum != x && tail +$lnum Makefile.in | sed 3q | grep install-exec-hook
+# install-exec-hook must appear in the install-exec-am rule.
+sed -n '/^install-exec-am:/,/^[^	]/p' Makefile.in | \
+  grep install-exec-hook
