@@ -1,3 +1,7 @@
+2002-02-19  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	* tests/insthook.test: Use sed instead of "tail +X".
+
 2002-02-18  Paul Eggert  <eggert@twinsun.com>
 
 	* lib/depcomp: Don't use "tail +3"; it's not portable to
